# SandpileModel

./: CMakeLists.txt  README.md  example_of_input.tsv
sandpile/: bmp.cpp  bmp.h  main.cpp  queue.cpp  queue.h  sandpile.cpp  sandpile.h
